dev: avoid cumulative layout shift (cls)

--- a/front/src/scss/_main.scss
+++ b/front/src/scss/_main.scss
@@ -1,4 +1,5 @@
 main {
+  flex: 1;
   display: flex;
   flex-flow: column;
   align-items: center;
